# SimpleNet

./: CMakeLists.txt  Layer.cpp  Net.cpp  README.md  circles.txt  dataset.txt  main.cpp
datasets/: dataset.txt  dsgen.py  testsetBig.txt  testsetSmall.txt
src/: Dataset.cpp  Dataset.h  Layer.cpp  Layer.h  Net.cpp  Net.h  evaluate.cpp  funcs.cpp  funcs.h  main.cpp  train.cpp
